# bookstoreweb

./: .replit  addresses.json  app (copy).py  app.py  models.py  orders.json  products (copy).json  products.json  products_old.json  pyproject.toml  replit.nix  replit_zip_error_log.txt  requirements.txt  user.json  users.json
static/css/: styles.css
templates/: address.html  base.html  cart.html  checkout.html  delete.html  edit.html  index.html  login.html  orders.html  orders_delete.html  orders_edit.html  orders_history.html  product_delete.html  product_edit.html  product_list.html  products.html  products_custom.html  register.html  user_setting.html  users.html
